      
      \item \code{pairs()} gains new arguments to select sets of
      variables to be plotted against each other.
      
      \item \code{file.info(, extra_cols = FALSE)} allows a minimal set
      of columns to be computed.
      
      \item New function \code{dir.exists()} in \pkg{base} to test
      efficiently whether one or more paths exist and are directories.

      \item \code{dput()} and friends gain a new control
      \samp{"hexNumeric"} which outputs double and complex quantities
      as binary fractions (see \code{sprintf("\%a")}) to full precision
      (and no noise).
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item When building \R as a shared library, the
      \option{-L${R_HOME}/lib${R_ARCH}} flag is placed earlier in the
      link commands used during installation and when packages are
      installed: this helps ensure that the current build has priority if
      an \R shared library has already been installed by e.g.
      \command{install-libR} in a library mentioned in \env{LDFLAGS}
      (and not in \sQuote{your system's library directory} as
      documented). (Wish of \PR{15790}.)

      \item LaTeX package \pkg{upquote} is no longer required for \R's
      use of \pkg{inconsolata}.
      
      \item The \code{\\donttest} sections of \R's help files can be
      tested by\cr
      \command{make check TEST_DONTTEST=TRUE}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item There is some support for testing the \code{\\dontrun} and
      \code{\\donttest} parts of examples in packages.

      \code{tools::testInstalledPackage()} accepts new arguments
      \code{commentDontrun = FALSE} and \code{commentDonttest = FALSE}.

      \command{R CMD check} gains \option{--run-dontrun} and
      \option{--run-donttest} options.
    }
  }

  %% \subsection{BUG FIXES}{
  %%   \itemize{
  %%   }
  %% }
}

\section{\Rlogo CHANGES IN R 3.1.0 patched}{
  \subsection{NEW FEATURES}{