@@ -931,7 +931,8 @@ typedef enum {
     R_pstream_any_format,
     R_pstream_ascii_format,
     R_pstream_binary_format,
-    R_pstream_xdr_format
+    R_pstream_xdr_format,
+    R_pstream_asciihex_format
 } R_pstream_format_t;
 
 typedef struct R_outpstream_st *R_outpstream_t;
