@@ -207,6 +207,7 @@ static void OutInteger(R_outpstream_t stream, int i)
     char buf[128];
     switch (stream->type) {
     case R_pstream_ascii_format:
+    case R_pstream_asciihex_format:
 	if (i == NA_INTEGER)
 	    Rsnprintf(buf, sizeof(buf), "NA\n");
 	else
@@ -243,6 +244,19 @@ static void OutReal(R_outpstream_t stream, double d)
 	    Rsnprintf(buf, sizeof(buf), "%.16g\n", d);
 	stream->OutBytes(stream, buf, (int)strlen(buf));
 	break;
+    case R_pstream_asciihex_format:
+	if (! R_FINITE(d)) {
+	    if (ISNAN(d))
+		Rsnprintf(buf, sizeof(buf), "NA\n");
+	    else if (d < 0)
+		Rsnprintf(buf, sizeof(buf), "-Inf\n");
+	    else
+		Rsnprintf(buf, sizeof(buf), "Inf\n");
+	}
+	else
+	    Rsnprintf(buf, sizeof(buf), "%a\n", d);
+	stream->OutBytes(stream, buf, (int)strlen(buf));
+	break;
     case R_pstream_binary_format:
 	stream->OutBytes(stream, &d, sizeof(double));
 	break;
@@ -266,6 +280,7 @@ static void OutByte(R_outpstream_t stream, Rbyte i)
     char buf[128];
     switch (stream->type) {
     case R_pstream_ascii_format:
+    case R_pstream_asciihex_format:
 	Rsnprintf(buf, sizeof(buf), "%02x\n", i);
 	stream->OutBytes(stream, buf, (int)strlen(buf));
 	break;
@@ -281,7 +296,8 @@ static void OutByte(R_outpstream_t stream, Rbyte i)
 /* This assumes CHARSXPs remain limited to 2^31-1 bytes */
 static void OutString(R_outpstream_t stream, const char *s, int length)
 {
-    if (stream->type == R_pstream_ascii_format) {
+    if (stream->type == R_pstream_ascii_format ||
+	stream->type == R_pstream_asciihex_format) {
 	int i;
 	char buf[128];
 	for (i = 0; i < length; i++) {
@@ -497,7 +513,9 @@ static void OutFormat(R_outpstream_t stream)
 	stream->type = R_pstream_xdr_format;
 	} */
     switch (stream->type) {
-    case R_pstream_ascii_format:  stream->OutBytes(stream, "A\n", 2); break;
+    case R_pstream_ascii_format:
+    case R_pstream_asciihex_format:
+	stream->OutBytes(stream, "A\n", 2); break;
     case R_pstream_binary_format: stream->OutBytes(stream, "B\n", 2); break;
     case R_pstream_xdr_format:    stream->OutBytes(stream, "X\n", 2); break;
     case R_pstream_any_format:
@@ -2086,7 +2104,8 @@ void R_InitConnOutPStream(R_outpstream_t stream, Rconnection con,
 			  SEXP (*phook)(SEXP, SEXP), SEXP pdata)
 {
     CheckOutConn(con);
-    if (con->text && type != R_pstream_ascii_format)
+    if (con->text && 
+	!(type == R_pstream_ascii_format || type == R_pstream_asciihex_format) )
 	error(_("only ascii format can be written to text mode connections"));
     R_InitOutPStream(stream, (R_pstream_data_t) con, type, version,
 		     OutCharConn, OutBytesConn, phook, pdata);
@@ -2148,7 +2167,8 @@ do_serializeToConn(SEXP call, SEXP op, SEXP args, SEXP env)
     if (TYPEOF(CADDR(args)) != LGLSXP)
 	error(_("'ascii' must be logical"));
     ascii = INTEGER(CADDR(args))[0];
-    if (ascii) type = R_pstream_ascii_format;
+    if (ascii == NA_LOGICAL) type = R_pstream_asciihex_format;
+    else if (ascii) type = R_pstream_ascii_format;
     else type = R_pstream_xdr_format;
 
     if (CADDDR(args) == R_NilValue)
@@ -2463,9 +2483,9 @@ R_serialize(SEXP object, SEXP icon, SEXP ascii, SEXP Sversion, SEXP fun)
     hook = fun != R_NilValue ? CallHook : NULL;
 
     int asc = asLogical(ascii);
-    if (asc == NA_LOGICAL) type = R_pstream_binary_format;
+    if (asc == NA_LOGICAL) type = R_pstream_asciihex_format;
     else if (asc) type = R_pstream_ascii_format;
-    else type = R_pstream_xdr_format; /**** binary or ascii if no XDR? */
+    else type = R_pstream_xdr_format;
 
     if (icon == R_NilValue) {
 	RCNTXT cntxt;
